#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-29
- fix bug with controlling ndarray chunking: JIRA PSAS-137
  save 'class' of type in writer map. use this to lookup which dataset
  creation properties to use.

Tag: V00-02-28
- add parameter useControlData to get chunking control.
- added unit test for chunking. Still have bug for controlling ndarray
  chunking separately: JIRA PSAS-137

Tag: V00-02-27
- add std: to use of type_info in header, JIRA PSAS-127

Tag: V00-02-26
- extend reporting on unused parameters to cover chunk parameters
	
Tag: V00-02-25
- add diagnostic about how long fastindex search for other stream calib
  cycles takes.
- attempt to make fastindex a little faster by decreasing block size while
  increasing the number of blocks searched. Notes in JIRA issue PSAS-118
	
Tag: V00-02-24
- attempt to address problems with runs from xppf7815 - JIRA issue PSAS-117
  call H5Fflush on master file after external links added and file created.
  call H5Fflush on generally translated files before being closed.
- check for valid dataset id's and group id's before closing.
- close runGroupDir at appropriate point
	
Tag: V00-02-23
- fix bugs in automatic translation files, can't have a # comment character
  on a line with an integer parameter.

Tag: V00-02-22
- make two psana config files for automatic translation, one for standard,
  and one for monitoring (new file is monitoring_translation.cfg). Although 
  one file would work for both, it makes it easier to change one without 
  affecting the other.

Tag: V00-02-21
- updated data/automatic_translation.cfg file for both the online monitoring