@@ -89,6 +89,7 @@ store_epics = calib_repeat
 AcqTdc = include               # Psana::Acqiris::TdcConfigV1, Psana::Acqiris::TdcDataV1
 AcqWaveform = include          # Psana::Acqiris::ConfigV1, Psana::Acqiris::DataDescV1
 Alias = include                # Psana::Alias::ConfigV1
+AnalogInput = include          # Psana::Bld::BldDataAnalogInputV1
 Andor = include                # Psana::Andor::ConfigV1, Psana::Andor::FrameV1
 Arraychar = include            # Psana::Arraychar::DataV1
 Control = include              # Psana::ControlData::ConfigV1, Psana::ControlData::ConfigV2, Psana::ControlData::ConfigV3
